gcc/testsuite/rust/rustc/ui/error-codes/E0412.rs
impl Something {} // { dg-error ".E0412." "" { target *-*-* } }

fn main() {
}

